--- a/index.html
+++ b/index.html
@@ -4,173 +4,176 @@
         <title>Petr Devaikin</title>
         <meta charset="UTF-8">
         <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href='http://fonts.googleapis.com/css?family=Roboto+Slab&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
-        <h1>Petr Devaikin</h1>
+        <div id="content">
+            <h1>Petr Devaikin</h1>
 
-        <div id="contacts">
-            <ul>
-                <li>
-                    <a href="mailto:p.devaikin@gmail.com">p.devaikin@gmail.com</a>
-                </li>
-                <li>
-                    <a href="https://github.com/petr-devaikin">GitHub</a>
-                </li>
-                <li>
-                    <a href="http://ru.linkedin.com/pub/petr-devaikin/81/827/45">LinkedIn</a>
-                </li>
-            </ul>
-        </div>
+            <div id="contacts">
+                <ul>
+                    <li>
+                        <a href="mailto:p.devaikin@gmail.com">p.devaikin@gmail.com</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/petr-devaikin">GitHub</a>
+                    </li>
+                    <li>
+                        <a href="http://ru.linkedin.com/pub/petr-devaikin/81/827/45">LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
 
-        <div id="projects">
-            <div class="project">
-                <div class="screenshot">
-                    <a href="movement/"><img src="img/movement.png" alt="Æ-movement" /></a>
+            <div id="projects">
+                <div class="project">
+                    <div class="screenshot">
+                        <a href="movement/"><img src="img/movement.png" alt="Æ-movement" /></a>
+                    </div>
+                    <div class="title">
+                        <a href="movement/">
+                            Æ-movement
+                        </a>
+                    </div>
+                    <div class="description">
+                        Interactive system for real-time visualization of body performance. The goal is to emphasize uniqueness and temporality of the movement by immersing users in full body aesthetic experience.
+                    </div>
+                    <div class="technologies">
+                        Processing
+                    </div>
                 </div>
-                <div class="title">
-                    <a href="movement/">
-                        Æ-movement
-                    </a>
+                <div class="project">
+                    <div class="screenshot">
+                        <a href="http://pazzla.qoollo.com"><img src="img/pazzla.jpg" alt="Pazzla" /></a>
+                    </div>
+                    <div class="title">
+                        <a href="http://pazzla.qoollo.com">
+                            Pazzla
+                        </a>
+                    </div>
+                    <div class="description">
+                        Service to make a photo mosaic of Instagram pictures.
+                    </div>
+                    <div class="technologies">
+                        Instagram, Python, Flask, HTML, HTML5, JavaScript, D3, CSS, SASS, SQLite
+                    </div>
                 </div>
-                <div class="description">
-                    Interactive system for real-time visualization of body performance. The goal is to emphasize uniqueness and temporality of the movement by immersing users in full body aesthetic experience.
+                <div class="project">
+                    <div class="screenshot">
+                        <a href="http://hashtag-urbanmap.rhcloud.com"><img src="img/hashtagmap.jpg" alt="Hashtag Map" /></a>
+                    </div>
+                    <div class="title">
+                        <a href="http://hashtag-urbanmap.rhcloud.com">
+                            Hashtag Map
+                        </a>
+                    </div>
+                    <div class="description">
+                        Visual representation of the city life of&nbsp;Moscow, Berlin, Saint&nbsp;Petersburg and London by&nbsp;popular Instagram hashtags. The data is&nbsp;updated every hour.
+                    </div>
+                    <div class="technologies">
+                        Data&nbsp;visualization, Instagram, Python, Flask, HTML, HTML5, Canvas, JavaScript, CSS, MySql
+                    </div>
                 </div>
-                <div class="technologies">
-                    Processing
+                <div class="project">
+                    <div class="screenshot">
+                        <a href="http://iseehue.herokuapp.com"><img src="img/iseehue.jpg" alt="I See Hue" /></a>
+                    </div>
+                    <div class="title">
+                        <a href="http://iseehue.herokuapp.com">
+                            I See Hue
+                        </a>
+                    </div>
+                    <div class="description">
+                        Color perception diagram. After passing a&nbsp;simple test, you can compare your results with that of&nbsp;others.
+                    </div>
+                    <div class="technologies">
+                        Data&nbsp;visualization, Python, Flask, HTML, HTML5, SVG, JavaScript, RequireJS, CSS, SCSS, PostgreSQL
+                    </div>
                 </div>
+                <div class="project">
+                    <div class="screenshot">
+                        <a href="http://petr-devaikin.github.io/duma/v1/"><img src="img/duma.jpg" alt="Russian Duma Flowchart" /></a>
+                    </div>
+                    <div class="title">
+                        <a href="http://petr-devaikin.github.io/duma/v1/">
+                            Russian Duma Flowchart
+                        </a>
+                    </div>
+                    <div class="description">
+                        Interactive visualization of the Russian Parliament structure from 1993. Users can observe the history of&nbsp;a&nbsp;concrete party or&nbsp;a&nbsp;deputy by&nbsp;clicking on&nbsp;the list on&nbsp;the bottom, the list on&nbsp;the right or&nbsp;the diagram components.
+                    </div>
+                    <div class="technologies">
+                        Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, CSS
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="screenshot">
+                        <a href="http://petr-devaikin.github.io/katz/eng/"><img src="img/katz1.jpg" alt="Max Katz Crowdfunding (age)" /></a>
+                    </div>
+                    <div class="title">
+                        <a href="http://petr-devaikin.github.io/katz/eng/">
+                            Max Katz Crowdfunding (age)
+                        </a>
+                    </div>
+                    <div class="description">
+                        Visualization of the Maxim Katz crowdfunding campaign in&nbsp;2014. The interactive diagram provides information on&nbsp;the age, gender and transaction amount of&nbsp;contributors.
+                    </div>
+                    <div class="technologies">
+                        Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, D3, CSS
+                    </div>
+                </div>
+                <div class="project">
+                    <div class="screenshot">
+                        <a href="http://petr-devaikin.github.io/katz/eng/timeline/"><img src="img/katz2.jpg" alt="Max Katz Crowdfunding (timeline)" /></a>
+                    </div>
+                    <div class="title">
+                        <a href="http://petr-devaikin.github.io/katz/eng/timeline/">
+                            Max Katz Crowdfunding (timeline)
+                        </a>
+                    </div>
+                    <div class="description">
+                        Timeline of the Maxim Katz crowdfunding campaign in&nbsp;2014.
+                    </div>
+                    <div class="technologies">
+                        Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, D3, CSS
+                    </div>
+                </div>
+                <!--div class="project">
+                    <div class="screenshot">
+                        <a href="http://petr-devaikin.github.io/metro/"><img src="img/metro.jpg" alt="Moscow Metro Growth Map" /></a>
+                    </div>
+                    <div class="title">
+                        <a href="http://petr-devaikin.github.io/metro/">
+                            Moscow Metro Growth Map
+                        </a>
+                    </div>
+                    <div class="description">
+                        The map shows how Moscow metro was developed from 1937 to&nbsp;2014. To&nbsp;show the age of&nbsp;stations the heatmap color coding is&nbsp;used. Circles with different brightness around stations show the time to&nbsp;achieve a&nbsp;station by&nbsp;walking.
+                    </div>
+                    <div class="technologies">
+                        Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, D3, CSS
+                    </div>
+                </div-->
+                <!--div class="project">
+                    <div class="screenshot">
+                        <a href="http://поигратьсясошрифтиками.рф"><img src="img/font.jpg" alt="поигратьсясошрифтиками.рф" /></a>
+                    </div>
+                    <div class="title">
+                        <a href="http://поигратьсясошрифтиками.рф/">
+                            поигратьсясошрифтиками.рф
+                        </a>
+                    </div>
+                    <div class="description">
+                        The tool is&nbsp;developed for designers who are tired of&nbsp;customers&rsquo; requests to&nbsp;change the font.
+                    </div>
+                    <div class="technologies">
+                        Python, Flask, HTML, CSS
+                    </div>
+                </div-->
             </div>
-            <div class="project">
-                <div class="screenshot">
-                    <a href="http://pazzla.qoollo.com"><img src="img/pazzla.jpg" alt="Pazzla" /></a>
-                </div>
-                <div class="title">
-                    <a href="http://pazzla.qoollo.com">
-                        Pazzla
-                    </a>
-                </div>
-                <div class="description">
-                    Service to make a photo mosaic of Instagram pictures.
-                </div>
-                <div class="technologies">
-                    Instagram, Python, Flask, HTML, HTML5, JavaScript, D3, CSS, SASS, SQLite
-                </div>
-            </div>
-            <div class="project">
-                <div class="screenshot">
-                    <a href="http://hashtag-urbanmap.rhcloud.com"><img src="img/hashtagmap.jpg" alt="Hashtag Map" /></a>
-                </div>
-                <div class="title">
-                    <a href="http://hashtag-urbanmap.rhcloud.com">
-                        Hashtag Map
-                    </a>
-                </div>
-                <div class="description">
-                    Visual representation of the city life of&nbsp;Moscow, Berlin, Saint&nbsp;Petersburg and London by&nbsp;popular Instagram hashtags. The data is&nbsp;updated every hour.
-                </div>
-                <div class="technologies">
-                    Data&nbsp;visualization, Instagram, Python, Flask, HTML, HTML5, Canvas, JavaScript, CSS, MySql
-                </div>
-            </div>
-            <div class="project">
-                <div class="screenshot">
-                    <a href="http://iseehue.herokuapp.com"><img src="img/iseehue.jpg" alt="I See Hue" /></a>
-                </div>
-                <div class="title">
-                    <a href="http://iseehue.herokuapp.com">
-                        I See Hue
-                    </a>
-                </div>
-                <div class="description">
-                    Color perception diagram. After passing a&nbsp;simple test, you can compare your results with that of&nbsp;others.
-                </div>
-                <div class="technologies">
-                    Data&nbsp;visualization, Python, Flask, HTML, HTML5, SVG, JavaScript, RequireJS, CSS, SCSS, PostgreSQL
-                </div>
-            </div>
-            <div class="project">
-                <div class="screenshot">
-                    <a href="http://petr-devaikin.github.io/duma/v1/"><img src="img/duma.jpg" alt="Russian Duma Flowchart" /></a>
-                </div>
-                <div class="title">
-                    <a href="http://petr-devaikin.github.io/duma/v1/">
-                        Russian Duma Flowchart
-                    </a>
-                </div>
-                <div class="description">
-                    Interactive visualization of the Russian Parliament structure from 1993. Users can observe the history of&nbsp;a&nbsp;concrete party or&nbsp;a&nbsp;deputy by&nbsp;clicking on&nbsp;the list on&nbsp;the bottom, the list on&nbsp;the right or&nbsp;the diagram components.
-                </div>
-                <div class="technologies">
-                    Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, CSS
-                </div>
-            </div>
-            <div class="project">
-                <div class="screenshot">
-                    <a href="http://petr-devaikin.github.io/katz/eng/"><img src="img/katz1.jpg" alt="Max Katz Crowdfunding (age)" /></a>
-                </div>
-                <div class="title">
-                    <a href="http://petr-devaikin.github.io/katz/eng/">
-                        Max Katz Crowdfunding (age)
-                    </a>
-                </div>
-                <div class="description">
-                    Visualization of the Maxim Katz crowdfunding campaign in&nbsp;2014. The interactive diagram provides information on&nbsp;the age, gender and transaction amount of&nbsp;contributors.
-                </div>
-                <div class="technologies">
-                    Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, D3, CSS
-                </div>
-            </div>
-            <div class="project">
-                <div class="screenshot">
-                    <a href="http://petr-devaikin.github.io/katz/eng/timeline/"><img src="img/katz2.jpg" alt="Max Katz Crowdfunding (timeline)" /></a>
-                </div>
-                <div class="title">
-                    <a href="http://petr-devaikin.github.io/katz/eng/timeline/">
-                        Max Katz Crowdfunding (timeline)
-                    </a>
-                </div>
-                <div class="description">
-                    Timeline of the Maxim Katz crowdfunding campaign in&nbsp;2014.
-                </div>
-                <div class="technologies">
-                    Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, D3, CSS
-                </div>
-            </div>
-            <!--div class="project">
-                <div class="screenshot">
-                    <a href="http://petr-devaikin.github.io/metro/"><img src="img/metro.jpg" alt="Moscow Metro Growth Map" /></a>
-                </div>
-                <div class="title">
-                    <a href="http://petr-devaikin.github.io/metro/">
-                        Moscow Metro Growth Map
-                    </a>
-                </div>
-                <div class="description">
-                    The map shows how Moscow metro was developed from 1937 to&nbsp;2014. To&nbsp;show the age of&nbsp;stations the heatmap color coding is&nbsp;used. Circles with different brightness around stations show the time to&nbsp;achieve a&nbsp;station by&nbsp;walking.
-                </div>
-                <div class="technologies">
-                    Data&nbsp;visualization, HTML, HTML5, SVG, JavaScript, D3, CSS
-                </div>
-            </div-->
-            <!--div class="project">
-                <div class="screenshot">
-                    <a href="http://поигратьсясошрифтиками.рф"><img src="img/font.jpg" alt="поигратьсясошрифтиками.рф" /></a>
-                </div>
-                <div class="title">
-                    <a href="http://поигратьсясошрифтиками.рф/">
-                        поигратьсясошрифтиками.рф
-                    </a>
-                </div>
-                <div class="description">
-                    The tool is&nbsp;developed for designers who are tired of&nbsp;customers&rsquo; requests to&nbsp;change the font.
-                </div>
-                <div class="technologies">
-                    Python, Flask, HTML, CSS
-                </div>
-            </div-->
+            <div id="copy">&copy; 2016</div>
         </div>
-        <div id="copy">&copy; 2015</div>
 
 
         <script>
