--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                     <li>
                         <a href="http://ru.linkedin.com/pub/petr-devaikin/81/827/45">LinkedIn</a>
                     </li>
+                    <li>
+                        <a href="cv_devaikin.pdf">CV</a>
+                    </li>
                 </ul>
             </div>
 
