--- a/otto/info.html
+++ b/otto/info.html
@@ -7,22 +7,25 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        <span id="status">
-        </span>
-        <a href="#" id="fbLogout" onclick="logout()">Logout</a>
+        <div id="hi">
+            <span id="status">
+            </span>
+            <a href="#" id="fbLogout" class="button" onclick="logout()">Logout</a>
+        </div>
 
-        <hr/>
-        <a href="index.html">Friends</a> |
-        <a href="events.html">Events</a> |
-        <a href="likes.html">Likes</a> |
-        <a href="info.html">Info</a>
-        <hr/>
+        <div id="menu">
+            <a href="/">Friends</a>
+            <a href="events.html">Events</a>
+            <a href="likes.html">Likes</a>
+            <span>Info</span>
+        </div>
 
-        <h1>Info</h1>
         <div id="email">
         </div>
+        <br/>
         <div id="location">
         </div>
+        <br/>
         <div id="hometown">
         </div>
     </body>
