--- a/otto/likes.html
+++ b/otto/likes.html
@@ -7,18 +7,19 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        <span id="status">
-        </span>
-        <a href="#" id="fbLogout" onclick="logout()">Logout</a>
+        <div id="hi">
+            <span id="status">
+            </span>
+            <a href="#" id="fbLogout" class="button" onclick="logout()">Logout</a>
+        </div>
 
-        <hr/>
-        <a href="index.html">Friends</a> |
-        <a href="events.html">Events</a> |
-        <a href="likes.html">Likes</a> |
-        <a href="info.html">Info</a>
-        <hr/>
+        <div id="menu">
+            <a href="/">Friends</a>
+            <a href="events.html">Events</a>
+            <span>Likes</span>
+            <a href="info.html">Info</a>
+        </div>
 
-        <h1>Likes</h1>
         <div id="likes">
         </div>
     </body>
