--- a/otto/events.html
+++ b/otto/events.html
@@ -6,19 +6,20 @@
         <script src="js/init.js"></script>
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
-    <body>
-        <span id="status">
-        </span>
-        <a href="#" id="fbLogout" onclick="logout()">Logout</a>
+    <body class="map">
+        <div id="hi">
+            <span id="status">
+            </span>
+            <a href="#" id="fbLogout" class="button" onclick="logout()">Logout</a>
+        </div>
 
-        <hr/>
-        <a href="index.html">Friends</a> |
-        <a href="events.html">Events</a> |
-        <a href="likes.html">Likes</a> |
-        <a href="info.html">Info</a>
-        <hr/>
+        <div id="menu">
+            <a href="/">Friends</a>
+            <span>Events</span>
+            <a href="likes.html">Likes</a>
+            <a href="ingo.html">Info</a>
+        </div>
 
-        <h1>Events</h1>
         <div id="events">
         </div>
     </body>
