--- a/otto/index.html
+++ b/otto/index.html
@@ -7,24 +7,27 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        <span id="status">
-        </span>
-        <a href="#" id="fbLogout" onclick="logout()">Logout</a>
+        <div id="hi">
+            <span id="status">
+            </span>
+            <a href="#" id="fbLogout" class="button" onclick="logout()">Logout</a>
+        </div>
 
-        <hr/>
-        <a href="index.html">Friends</a> |
-        <a href="events.html">Events</a> |
-        <a href="likes.html">Likes</a> |
-        <a href="info.html">Info</a>
-        <hr/>
+        <div id="menu">
+            <span>Friends</span>
+            <a href="events.html">Events</a>
+            <a href="likes.html">Likes</a>
+            <a href="info.html">Info</a>
+        </div>
 
         <div id="inviteMsg">
         </div>
 
-        <h1>Friends</h1>
         <h3>Friends Using App</h3>
         <div id="friends">
         </div>
+
+        <a href="#" onclick="share();" class="button shareButton">Share ></a>
 
         <h3>Friends To Invite</h3>
         <div id="friendsToInvite">
