--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
                 </div>
                 <div class="project">
                     <div class="screenshot">
-                        <a href="http://hashtag-urbanmap.rhcloud.com"><img src="img/hashtagmap.jpg" alt="Hashtag Map" /></a>
+                        <a href="http://petr-devaikin.github.io/hashtagmap/"><img src="img/hashtagmap.jpg" alt="Hashtag Map" /></a>
                     </div>
                     <div class="title">
-                        <a href="http://hashtag-urbanmap.rhcloud.com">
+                        <a href="http://petr-devaikin.github.io/hashtagmap/">
                             Hashtag Map
                         </a>
                     </div>
                     <div class="description">
-                        Visual representation of the city life of&nbsp;Moscow, Berlin, Saint&nbsp;Petersburg and London by&nbsp;popular Instagram hashtags. The data is&nbsp;updated every hour.
+                        Visual representation of one day of the city life of&nbsp;Moscow, Berlin, Saint&nbsp;Petersburg and London by&nbsp;mapping Instagram hashtags.
                     </div>
                     <div class="technologies">
                         Data&nbsp;visualization, Instagram, Python, Flask, HTML, HTML5, Canvas, JavaScript, CSS, MySql
