--- a/hashtagmap/berlin.html
+++ b/hashtagmap/berlin.html
@@ -8,6 +8,10 @@
         <meta http-equiv="pragma" content="no-cache" />
         <title>Hashtag Map</title>
         <link rel="stylesheet" type="text/css" href="css/main.css">
+
+        <meta property="og:title" content="Hashtag Map of Berlin" />
+        <meta property="og:url" content="http://petr-devaikin.github.io/hashtagmap/berlin.html" />
+        <meta property="og:image" content="http://petr-devaikin.github.io/hashtagmap/berlin.png" />
     </head>
     <body>
         <!--div id="fb-root"></div>
