--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         Processing
                     </div>
                 </div>
-                <div class="project">
+                <!--div class="project">
                     <div class="screenshot">
                         <a href="http://pazzla.qoollo.com"><img src="img/pazzla.jpg" alt="Pazzla" /></a>
                     </div>
@@ -60,7 +60,7 @@
                     <div class="technologies">
                         Instagram, Python, Flask, HTML, HTML5, JavaScript, D3, CSS, SASS, SQLite
                     </div>
-                </div>
+                </div-->
                 <div class="project">
                     <div class="screenshot">
                         <a href="http://petr-devaikin.github.io/hashtagmap/"><img src="img/hashtagmap.jpg" alt="Hashtag Map" /></a>
