--- a/duma/v2/new.html
+++ b/duma/v2/new.html
@@ -3,6 +3,8 @@
     <head>
         <title></title>
 
+        <link rel="stylesheet" type="text/css" href="style.css">
+
         <script src="d3.min.js"></script>
 
         <script src="data/convocations.js"></script>
@@ -12,22 +14,6 @@
         <script src="data/transitions.js"></script>
 
         <script src="main.js"></script>
-
-        <style>
-            svg {
-                width: 100%;
-                height: 500px;
-            }
-
-            svg .convocation line {
-                stroke: #000;
-            }
-
-            svg .fraction rect {
-                stroke: #777;
-                fill: #fff;
-            }
-        </style>
     </head>
     <body>
         <svg>
