--- a/duma/v2/new.html
+++ b/duma/v2/new.html
@@ -17,6 +17,12 @@
     </head>
     <body>
         <svg>
+            <g class="convocations"></g>
+            <g class="transitions">
+                <g class="jump"></g>
+                <g class="direct"></g>
+            </g>
+            <g class="fractions"></g>
         </svg>
 
         <script>
