--- a/duma/v2/data.html
+++ b/duma/v2/data.html
@@ -54,14 +54,22 @@
                         else {
                             var prevFractionId = deputies[deputat.Id].fractionIds[deputies[deputat.Id].fractionIds.length - 1];
                             deputies[deputat.Id].fractionIds.push(f.Id);
-                            if (transitions[prevFractionId] === undefined)
-                                transitions[prevFractionId] = {
+                            if (transitions[prevFractionId] === undefined) {
+                                transitions[prevFractionId] = {}
+                                transitions[prevFractionId][f.Id] = {
+                                    from: prevFractionId,
+                                    to: f.Id,
+                                    number: 1
+                                }
+                            }
+                            else if (transitions[prevFractionId][f.Id] === undefined)
+                                transitions[prevFractionId][f.Id] = {
                                     from: prevFractionId,
                                     to: f.Id,
                                     number: 1
                                 }
                             else
-                                transitions[prevFractionId].number++;
+                                transitions[prevFractionId][f.Id].number++;
                         }
                     }
                 }
@@ -72,7 +80,7 @@
                 fractions[i].offset = fr_arr.filter(a => a.convocationId == f.convocationId && a.order < f.order).reduce((a,b) => a + b.size, 0);
             }
 
-            document.getElementById("div1").innerText = JSON.stringify(fractions);
+            document.getElementById("div1").innerText = JSON.stringify(transitions);
         </script>
     </body>
 </html>
