--- a/duma/v2/new.html
+++ b/duma/v2/new.html
@@ -17,6 +17,8 @@
     </head>
     <body>
         <svg>
+            <defs>
+            </defs>
             <g class="convocations"></g>
             <g class="transitions">
                 <g class="jump"></g>
