--- a/duma/v2/index.html
+++ b/duma/v2/index.html
@@ -38,7 +38,12 @@
             </div>
 
             <div id="rightPanel">
-                <h2 id="filterHeader">Депутаты (1200)</h2>
+                <h2 id="filterHeader">
+                    <span id="supp"></span>
+                    <span id="title"></span>
+                    <span id="counter"></span>
+                    <span id="clear">x</span>
+                </h2>
                 <div class="deputies">
                 </div>
             </div>
