--- a/duma/v2/data.html
+++ b/duma/v2/data.html
@@ -18,67 +18,15 @@
         <script src="data/ldpr.js"></script>
 
         <script>
-            function convertName(name) {
-                var i = name.indexOf(', ');
-                return name.substring(0, i) + name.substring(i + 1);
+            for (var i = 0; i < a_deputies.length; i++) {
+                a_deputies[i].name = a_deputies[i].name.replace('ё', 'е').replace('Ё', 'Е');
+
+                for (var j = 0; j <= i; j++)
+                    if (a_deputies[i].name == a_deputies[j].name)
+                        console.log(a_deputies[i]);
             }
 
-            var new_deputies = [
-                { name: "Алексей Александрович Журавлёв", fractionId: 7004 },
-                { name: "Рифат Габдулхакович Шайхутдинов", fractionId: 7005 }
-            ]
-
-            for (var i in er)
-                new_deputies.push({
-                    name: convertName(er[i]),
-                    fractionId: 7000
-                })
-
-            for (var i in ldpr)
-                new_deputies.push({
-                    name: convertName(ldpr[i]),
-                    fractionId: 7001
-                })
-
-            for (var i in sr)
-                new_deputies.push({
-                    name: convertName(sr[i]),
-                    fractionId: 7002
-                })
-
-            for (var i in kprf)
-                new_deputies.push({
-                    name: convertName(kprf[i]),
-                    fractionId: 7003
-                })
-
-            for (var i in new_deputies) {
-                for (var j in d_deputies)
-                    if (d_deputies[j].name == new_deputies[i].name) {
-                        index = j;
-                        break;
-                    }
-
-                if (d_deputies[index].fractionIds.length == 1)
-                    continue;
-
-                var lastfr = d_deputies[index].fractionIds[d_deputies[index].fractionIds.length - 2],
-                    nextfr = d_deputies[index].fractionIds[d_deputies[index].fractionIds.length - 1];
-
-                if (d_transitions[lastfr] === undefined)
-                    d_transitions[lastfr] = {}
-
-                if (d_transitions[lastfr][nextfr] === undefined)
-                    d_transitions[lastfr][nextfr] = {
-                        from: lastfr,
-                        to: nextfr,
-                        number: 0
-                    }
-                d_transitions[lastfr][nextfr].number++;
-
-            }
-
-            document.getElementById("div1").innerText = JSON.stringify(d_transitions);
+            //document.getElementById("div1").innerText = JSON.stringify(d_transitions);
         </script>
     </body>
 </html>
