--- a/duma/v2/index.html
+++ b/duma/v2/index.html
@@ -16,7 +16,6 @@
         <script src="data/convocations.js"></script>
         <script src="data/fractions.js"></script>
         <script src="data/parties.js"></script>
-        <script src="data/transitions.js"></script>
         <script src="data/deputies.js"></script>
 
         <script src="main.js"></script>
@@ -28,27 +27,41 @@
                 <svg>
                     <defs>
                     </defs>
-                    <g class="convocations"></g>
-                    <g class="transitions">
-                        <g class="jump"></g>
-                        <g class="direct"></g>
+                    <g class="drawings">
+                        <g class="convocations"></g>
+                        <g class="transitions">
+                            <g class="jump"></g>
+                            <g class="direct"></g>
+                        </g>
+                        <g class="fractions"></g>
                     </g>
-                    <g class="fractions"></g>
+                    <g class="hovers">
+                        <g class="hoverTransitions"></g>
+                        <g class="hoverFractions"></g>
+                    </g>
                 </svg>
             </div>
 
             <div id="rightPanel">
-                <h2 id="filterHeader">
+                <div id="listHeader">
                     <span id="supp"></span>
                     <span id="title"></span>
                     <span id="counter"></span>
-                    <span id="clear">x</span>
-                </h2>
+                    <span id="clear">
+                        <svg>
+                            <line x1="0" x2="100%" y1="0" y2="100%" />
+                            <line x1="100%" x2="0%" y1="0" y2="100%" />
+                        </svg>
+                    </span>
+                </div>
                 <div class="deputies">
                 </div>
             </div>
         </div>
 
+        <div id="data" style="color: white"></div>
+
+        <script src="data/transitions.js"></script>
         <script>
             draw();
         </script>
